--- a/business2/index.html
+++ b/business2/index.html
@@ -133,7 +133,7 @@
 </footer>
 <!-- / footer -->
 <!-- 18.06.02 バックグラウンドで再生される音 -->
-<audio id="bg_music" src="audio/sample_audio.mp3" type="audio/mpeg"></audio>
+<audio id="bg_music" src="audio/sample_audio.mp3" type="audio/mpeg" controls></audio>
 <!-- /18.06.02 バックグラウンドで再生される音 -->
 <script src="js/script.js"></script><!-- 18.06.02 移動 -->
 </body>
