--- a/business2/index.html
+++ b/business2/index.html
@@ -14,8 +14,7 @@
 <script src="js/jquery1.7.2.min.js"></script>
 </head>
 
-<!-- 18.06.02 音の再生の初期化 -->
-<body onload="initializeAudio();">
+<body>
 <header id="header" role="banner">
 	<div class="inner">
 		<h1>ホームページサンプル株式会社</h1>
@@ -130,11 +129,13 @@
 			<li><a href="subpage.html">経営理念</a></li>
 		</ul>
 	</div>
+  
 	<p id="copyright">Copyright &copy; SampleCompany All rights Reserved.
+  <button id="play_button">再生</button><!-- 18.06.02 再生ボタン -->
 </footer>
 <!-- / footer -->
 <!-- 18.06.02 バックグラウンドで再生される音 -->
-<!-- <audio id="bg_music" src="audio/sample_audio.mp3" type="audio/mpeg" controls></audio> -->
+<audio id="bg_music" src="audio/sample_audio.mp3" type="audio/mpeg" autoplay></audio>
 <!-- /18.06.02 バックグラウンドで再生される音 -->
 <script src="js/script.js"></script><!-- 18.06.02 移動 -->
 </body>
