--- a/index.html
+++ b/index.html
@@ -1,8 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-  </head>
-  <body>
-  </body>
+	<head>
+		<meta charset="utf-8" />
+		<meta name="Description" content="Personal homepage of Takane Ichinose showing his skills in programming language or some sort." />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>My Personal Homepage (Profile)</title>
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+	</head>
+	<body>
+		<div class="container">
+			<div class="card">
+				<div class="card-header">
+					<div class="image-container"></div>
+					<h3 class="text-center">Takane Ichinose</h3>
+					<p class="text-center"><small>Front-End Web Developer</small></p>
+				</div>
+				<div class="card-body">
+					<div class="content">
+						<div class="stat-box">
+							<h3>Programming Skills</h3>
+						</div>
+						<div class="stat-box">
+							<div class="stat-label">HTML</div>
+							<div class="stat-bar" data-stat="80"></div>
+						</div>
+						<div class="stat-box">
+							<div class="stat-label">CSS</div>
+							<div class="stat-bar" data-stat="80"></div>
+						</div>
+						<div class="stat-box">
+							<div class="stat-label">Javascript</div>
+							<div class="stat-bar" data-stat="80"></div>
+						</div>
+						<div class="stat-box">
+							<div class="stat-label">PHP</div>
+							<div class="stat-bar" data-stat="70"></div>
+						</div>
+						<div class="stat-box">
+							<div class="stat-label">Java</div>
+							<div class="stat-bar" data-stat="60"></div>
+						</div>
+					</div>
+					<div class="content">
+						<h3>Contact</h3>
+						<p>ichinose.takane@gmail.com</p>
+					</div>
+					<div class="content">
+						<h3>My Accounts</h3>
+						<div class="my-accounts">
+							<a href="https://www.twitter.com/takane_ichi" class="acct-twitter"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.facebook.com/takaneichinose" class="acct-facebook"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.facebook.com/takaneichinose" class="acct-google-plus"><i class="fa fa-google-plus"></i></a>
+							<a href="https://github.com/takaneichinose" class="acct-github"><i class="fa fa-github"></i></a>
+							<a href="https://codepen.io/takaneichinose/" class="acct-codepen"><i class="fa fa-codepen"></i></a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script src="js/script.js"></script>
+	</body>
 </html>
 
