--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<div class="my-accounts">
 							<a href="https://www.twitter.com/takane_ichi" class="acct-twitter"><i class="fa fa-twitter"></i></a>
 							<a href="https://www.facebook.com/takaneichinose" class="acct-facebook"><i class="fa fa-facebook"></i></a>
-							<a href="https://www.facebook.com/takaneichinose" class="acct-google-plus"><i class="fa fa-google-plus"></i></a>
+							<a href="https://plus.google.com/+TakaneIchinose" class="acct-google-plus"><i class="fa fa-google-plus"></i></a>
 							<a href="https://github.com/takaneichinose" class="acct-github"><i class="fa fa-github"></i></a>
 							<a href="https://codepen.io/takaneichinose/" class="acct-codepen"><i class="fa fa-codepen"></i></a>
 						</div>
