Redesign of the page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 		<meta name="Description" content="Personal homepage of Takane Ichinose showing his skills in programming language or some sort." />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>My Personal Homepage (Profile)</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 	</head>
 	<body>
 		<div class="container">
@@ -19,14 +20,10 @@
 				<div class="card-body">
 					<div class="content">
 						<div class="stat-box">
-							<h3>Programming Skills</h3>
+							<h3>Technology</h3>
 						</div>
 						<div class="stat-box">
-							<div class="stat-label">HTML</div>
-							<div class="stat-bar" data-stat="80"></div>
-						</div>
-						<div class="stat-box">
-							<div class="stat-label">CSS</div>
+							<div class="stat-label">CSS/SCSS</div>
 							<div class="stat-bar" data-stat="80"></div>
 						</div>
 						<div class="stat-box">
@@ -34,12 +31,16 @@
 							<div class="stat-bar" data-stat="80"></div>
 						</div>
 						<div class="stat-box">
-							<div class="stat-label">PHP</div>
-							<div class="stat-bar" data-stat="70"></div>
+							<div class="stat-label">UI/UX</div>
+							<div class="stat-bar" data-stat="65"></div>
 						</div>
 						<div class="stat-box">
-							<div class="stat-label">Java</div>
-							<div class="stat-bar" data-stat="60"></div>
+							<div class="stat-label">Database</div>
+							<div class="stat-bar" data-stat="75"></div>
+						</div>
+						<div class="stat-box">
+							<div class="stat-label">PHP</div>
+							<div class="stat-bar" data-stat="70"></div>
 						</div>
 					</div>
 					<div class="content">
@@ -48,12 +49,7 @@
 					</div>
 					<div class="content">
 						<h3>My Accounts</h3>
-						<div class="my-accounts">
-							<a href="https://www.twitter.com/takane_ichi" class="acct-twitter"><i class="fa fa-twitter"></i></a>
-							<a href="https://www.facebook.com/takaneichinose" class="acct-facebook"><i class="fa fa-facebook"></i></a>
-							<a href="https://plus.google.com/+TakaneIchinose" class="acct-google-plus"><i class="fa fa-google-plus"></i></a>
-							<a href="https://github.com/takaneichinose" class="acct-github"><i class="fa fa-github"></i></a>
-							<a href="https://codepen.io/takaneichinose/" class="acct-codepen"><i class="fa fa-codepen"></i></a>
+						<div class="my-accounts"><a class="acct-twitter" href="https://www.twitter.com/takane_ichi"><i class="fab fa-twitter"></i></a><a class="acct-facebook" href="https://www.facebook.com/takaneichinose"><i class="fab fa-facebook"></i></a><a class="acct-github" href="https://github.com/takaneichinose"><i class="fab fa-github"></i></a><a class="acct-codepen" href="https://codepen.io/takaneichinose"><i class="fab fa-codepen"></i></a>
 						</div>
 					</div>
 				</div>
