--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<meta name="Description" content="Personal homepage of Takane Ichinose showing his skills in programming language or some sort." />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>My Personal Homepage (Profile)</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
 		<link rel="stylesheet" href="css/style.css" />
+		<meta name="Title" content="Takane Ichinose" />
+		<meta name="Description" content="Personal homepage of Takane Ichinose." />
 	</head>
 	<body>
 		<div class="container">
@@ -32,7 +33,7 @@
 						</div>
 						<div class="stat-box">
 							<div class="stat-label">UI/UX</div>
-							<div class="stat-bar" data-stat="65"></div>
+							<div class="stat-bar" data-stat="70"></div>
 						</div>
 						<div class="stat-box">
 							<div class="stat-label">Database</div>
@@ -40,7 +41,7 @@
 						</div>
 						<div class="stat-box">
 							<div class="stat-label">PHP</div>
-							<div class="stat-bar" data-stat="70"></div>
+							<div class="stat-bar" data-stat="65"></div>
 						</div>
 					</div>
 					<div class="content">
