--- a/index.html
+++ b/index.html
@@ -1,62 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>My Personal Homepage (Profile)</title>
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		<meta name="Title" content="Takane Ichinose" />
-		<meta name="Description" content="Personal homepage of Takane Ichinose." />
-	</head>
-	<body>
-		<div class="container">
-			<div class="card">
-				<div class="card-header">
-					<div class="image-container"></div>
-					<h3 class="text-center">Takane Ichinose</h3>
-					<p class="text-center"><small>Front-End Web Developer</small></p>
-				</div>
-				<div class="card-body">
-					<div class="content">
-						<div class="stat-box">
-							<h3>Technology</h3>
-						</div>
-						<div class="stat-box">
-							<div class="stat-label">CSS/SCSS</div>
-							<div class="stat-bar" data-stat="80"></div>
-						</div>
-						<div class="stat-box">
-							<div class="stat-label">Javascript</div>
-							<div class="stat-bar" data-stat="80"></div>
-						</div>
-						<div class="stat-box">
-							<div class="stat-label">UI/UX</div>
-							<div class="stat-bar" data-stat="70"></div>
-						</div>
-						<div class="stat-box">
-							<div class="stat-label">Database</div>
-							<div class="stat-bar" data-stat="75"></div>
-						</div>
-						<div class="stat-box">
-							<div class="stat-label">PHP</div>
-							<div class="stat-bar" data-stat="65"></div>
-						</div>
-					</div>
-					<div class="content">
-						<h3>Contact</h3>
-						<p>ichinose.takane@gmail.com</p>
-					</div>
-					<div class="content">
-						<h3>My Accounts</h3>
-						<div class="my-accounts"><a class="acct-twitter" href="https://www.twitter.com/takane_ichi"><i class="fab fa-twitter"></i></a><a class="acct-facebook" href="https://www.facebook.com/takaneichinose"><i class="fab fa-facebook"></i></a><a class="acct-github" href="https://github.com/takaneichinose"><i class="fab fa-github"></i></a><a class="acct-codepen" href="https://codepen.io/takaneichinose"><i class="fab fa-codepen"></i></a>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<script src="js/script.js"></script>
-	</body>
+  <head>
+    <link rel="preload" href="/_nuxt/907fb8f.js" as="script"><link rel="preload" href="/_nuxt/50eb0b9.js" as="script"><link rel="preload" href="/_nuxt/b675f18.js" as="script"><link rel="preload" href="/_nuxt/48fe31f.js" as="script">
+  </head>
+  <body>
+    <div id="__nuxt"><style>#nuxt-loading{background:#fff;visibility:hidden;opacity:0;position:absolute;left:0;right:0;top:0;bottom:0;display:flex;justify-content:center;align-items:center;flex-direction:column;animation:nuxtLoadingIn 10s ease;-webkit-animation:nuxtLoadingIn 10s ease;animation-fill-mode:forwards;overflow:hidden}@keyframes nuxtLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}@-webkit-keyframes nuxtLoadingIn{0%{visibility:hidden;opacity:0}20%{visibility:visible;opacity:0}100%{visibility:visible;opacity:1}}#nuxt-loading>div,#nuxt-loading>div:after{border-radius:50%;width:5rem;height:5rem}#nuxt-loading>div{font-size:10px;position:relative;text-indent:-9999em;border:.5rem solid #f5f5f5;border-left:.5rem solid #000;-webkit-transform:translateZ(0);-ms-transform:translateZ(0);transform:translateZ(0);-webkit-animation:nuxtLoading 1.1s infinite linear;animation:nuxtLoading 1.1s infinite linear}#nuxt-loading.error>div{border-left:.5rem solid #ff4500;animation-duration:5s}@-webkit-keyframes nuxtLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes nuxtLoading{0%{-webkit-transform:rotate(0);transform:rotate(0)}100%{-webkit-transform:rotate(360deg);transform:rotate(360deg)}}</style><script>window.addEventListener("error",function(){var e=document.getElementById("nuxt-loading");e&&(e.className+=" error")})</script><div id="nuxt-loading" aria-live="polite" role="status"><div>Loading...</div></div></div><script>window.__NUXT__={config:{},staticAssetsBase:void 0}</script>
+  <script src="/_nuxt/907fb8f.js"></script><script src="/_nuxt/50eb0b9.js"></script><script src="/_nuxt/b675f18.js"></script><script src="/_nuxt/48fe31f.js"></script></body>
 </html>
-
