--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Personal profile of Takane Ichinose. My skills, and my work experience is written here. I'm a web developer, but also interested in making games.">
     <title>Takane Ichinose | Personal Profile</title>
+    <link rel="icon" href="./profile-favicon.ico">
     <link rel="stylesheet" href="./styles/index.processed.css">
     <script>console.clear();</script>
   </head>
